# app/Http/Resources/PostalPackageResource.php
@@ -22,11 +22,36 @@ class PostalPackageResource extends JsonResource
 
     public function toArray($request): array
     {
+//        return [
+//            'id' => $this->id,
+//            'name' => $this->name,
+//            'email' => $this->email,
+//            'created_at' => $this->created_at->format('Y-m-d H:i:s'),
+//            'updated_at' => $this->updated_at->toDateTimeString(),
+//        ];
+
         return [
             'id' => $this->id,
-            'name' => $this->name,
-            'email' => $this->email,
-            'created_at' => $this->created_at->format('Y-m-d H:i:s'),
+            'tracking_code' => $this->tracking_code,
+            'weight' => (float) $this->weight,
+            'dimensions' => [
+                'length' => (float) $this->length,
+                'width' => (float) $this->width,
+                'height' => (float) $this->height,
+            ],
+            'sender' => [
+                'name' => $this->sender->name,
+                'mobile' => $this->sender->mobile,
+                'postal_code' => $this->sender->postal_code,
+                'address' => $this->sender->address,
+            ],
+            'receiver' => [
+                'name' => $this->receiver->name,
+                'mobile' => $this->receiver->mobile,
+                'postal_code' => $this->receiver->postal_code,
+                'address' => $this->receiver->address,
+            ],
+            'created_at' => $this->created_at->toDateTimeString(),
             'updated_at' => $this->updated_at->toDateTimeString(),
         ];
     }
